# last-fm-music-mapper

./: .gitignore  .tool-versions  Gemfile  LICENSE  Makefile  README.md  Rakefile  config.json.example  config.ru  flake.nix  helpers.rb  last-fm-music-mapper.cabal  last_fm_music_mapper.rb  schema.rb  settings.json.example  setup.rb  stack.yaml
.circleci/: config.yml
.github/workflows/: build.yml
lib/: last_fm.rb  music_mapper.rb  thematic_map.rb
lib/music_mapper/: countries.rb
model/: artist.rb  associations.rb  country.rb  period.rb  schema.rb  seed_data.rb  tag.rb  user.rb
public/ext/: music-mapper.js
spec/: setup.rb
spec/fixture/: last_fm_artist_get_top_tags.json  last_fm_artist_get_top_tags_gb_and_jw.json  last_fm_artist_get_top_tags_kylie_minogue.json  last_fm_artist_get_top_tags_late_junction.json  last_fm_artist_get_top_tags_madonna.json  last_fm_user_get_top_artists.json  last_fm_user_get_top_artists_7day.json  user_artists.json
spec/lib/: last_fm_spec.rb  music_mapper_spec.rb  thematic_map_spec.rb
spec/model/: artist_spec.rb  period_spec.rb  user_spec.rb
src/: Countries.hs  Main.hs  MusicMapper.hs
template/: index.html  user.html
template/css/: style.scss
view/: index.haml  layout.haml  no_results.haml  style.scss  user.haml
