name:                last-fm-music-mapper
version:             0.1.0.0
homepage:            https://github.com/smcgivern/last-fm-music-mapper
license:             MIT
license-file:        LICENSE
author:              Sean McGivern
maintainer:          sean@mcgivern.me.uk
copyright:           2020 Sean McGivern
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable last-fm-music-mapper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , stache
                     , text
                     , wai
                     , wai-middleware-static
